# mozc-ports

japanese/mozc-server/: Makefile  Makefile.MASTER_SITES  Makefile.jawiki_latest_pages_articles_multistream_index  distinfo
japanese/mozc-server/files/: extra-patch-rules__go+_go_private_sdk.bzl  patch-src_MODULE.bazel
japanese/unidic-to-mozc/: Makefile  distinfo  pkg-descr  pkg-plist
japanese/unidic-to-mozc/files/: pkg-message.in
